# arbexpert-backend

./: Cargo.toml  Dockerfile  build.rs
.cargo/: config.toml
dependencies/macros/: Cargo.toml
dependencies/macros/src/: lib.rs  select.rs  support.rs
dependencies/ratelimit/src/: lib.rs
dependencies/tokio-macros/: Cargo.toml
dependencies/tokio-macros/src/: lib.rs  select.rs
src/: main-docker.rs  main.rs  mexc.txt  test.rs  utils.rs
src/arbitrage/: common.rs  entry.rs  exit.rs  mod.rs
src/base/: mod.rs
src/base/exchange/: account.rs  assets.rs  error.rs  mod.rs  order.rs  sub_client.rs
src/base/http/: builder.rs  generic.rs  mod.rs
src/base/http/client/: ntex.rs
src/base/utils/: cell.rs  mod.rs  mpsc.rs
src/base/ws/: client.rs
src/exchange/: catch.rs  mod.rs
src/exchange/binance/: mod.rs  utils.rs
src/exchange/binance/public/: constructor.rs  mod.rs  sub_client.rs  watch.rs
src/exchange/gate/: mod.rs  utils.rs
src/exchange/gate/public/: constructor.rs  mod.rs  sub_client.rs  watch.rs
src/exchange/mexc/: mod.rs  utils.rs
src/exchange/mexc/private/: client.rs  constructor.rs  fetch.rs  mod.rs  request.rs  watch.rs
src/exchange/mexc/public/: constructor.rs  mod.rs  sub_client.rs  symbols.rs  watch.rs
src/proto/mexc/: PrivateAccountV3Api.proto  PrivateDealsV3Api.proto  PrivateOrdersV3Api.proto  PublicAggreBookTickerV3Api.proto  PublicAggreDealsV3Api.proto  PublicAggreDepthsV3Api.proto  PublicBookTickerBatchV3Api.proto  PublicBookTickerV3Api.proto  PublicDealsV3Api.proto  PublicIncreaseDepthsBatchV3Api.proto  PublicIncreaseDepthsV3Api.proto  PublicLimitDepthsV3Api.proto  PublicMiniTickerV3Api.proto  PublicMiniTickersV3Api.proto  PublicSpotKlineV3Api.proto  PushDataV3ApiWrapper.proto
src/utils/: exchange.rs
src/worker/: commands.rs  mod.rs  monitor.rs  state.rs  worker.rs
